--- a/doc/Latex/preambel/packages.tex
+++ b/doc/Latex/preambel/packages.tex
@@ -128,6 +128,6 @@
 % Optischer Randausgleich mit pdfTeX
 \usepackage{microtype}
 
-\usepackage[unicode]{hyperref}
+\usepackage[unicode, hidelinks]{hyperref}
 
 \usepackage{listings}
