--- a/doc/Latex/content/Titel.tex
+++ b/doc/Latex/content/Titel.tex
@@ -9,7 +9,7 @@
    \centering
    % Titel
    {\Huge Projektbericht} \\
-   \normalsize Modeler 2018
+   \normalsize Modeller 2018
    \vspace{3\baselineskip}\\
    \rmfamily\Large
   Fachhochschule Bielefeld \\
